cloase card on click by without some card on mobile & fix header title mobile styles

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -158,8 +158,8 @@
     &:before,
     &:after {
       margin: 0;
-      top: 6.5vw !important;
-      left: 0.7vw !important;
+      top: 6.9vw !important;
+      left: 0.5vw !important;
       padding-left: 9vw !important;
       width: 100%;
       height: 100%;
