--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -418,8 +418,7 @@
     flex-direction: column;
   }
   .card{
-    margin: 0;
-    margin-bottom: 10vw;
+    margin: 0 0 5vw 0;
     width: 100%;
     height: 55vw;
     background: transparent;
